@@ -1,3 +1,6 @@
+r266 (10. 10. 2024):
+Aggregated Health Equipment Tracker: Fixed a gap if icons are on the left side
+
 r265 (08. 10. 2024):
 Buffs: Fixed a crash on alarm
 First World Bank: Fixed a load crash
